--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
     <canvas id="test" style="border: 1px solid #d1d5da;border-radius: 3px;">
       Your browser doesn't support HTML5 Canvas
     </canvas>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
   </body>
 </html>
